# project-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  compose.yaml  compose.yml  docker-compose.yml  makefile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.gpu
docs/: README.md
exp/001/: run.ipynb
exp/001/config/: config.yaml
src/: sample.py
tests/: test_sample.py
