[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "ipykernel>=6.29.4"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "mdformat-gfm>=0.3.6",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-footnote>=0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true

[tool.rye.scripts]
# Lint scripts
lint = { chain = ["lint:ruff", "lint:mypy", "lint:mdformat"] }
"lint:ruff" = "ruff check ./ --diff"
"lint:mypy" = "mypy ./ --explicit-package-bases"
"lint:mdformat" = "mdformat --check"

# Format scripts
format = { chain = [ "format:ruff", "format:mdformat" ] }
"format:ruff" = "ruff format ./"
"format:mdformat" = "mdformat"

# Test script
test = "pytest tests -s"
